# seo_tracker

./: .gitignore  LICENSE  README.md  __init__.py  app.py  config.py  main.py  pyproject.toml  requirements.txt  runner.py  search.py
app/: READ.ME  README  database.py  db.py  main.py  models.py
app/api/routers/: organic.py
app/core/: db.py
app/database/: crud.py  queries.py
app/modules/: module_description.txt
app/modules/seo/: models.py  queries.py  router.py  run_seo_analysis.py  services.py
app/providers/: config.py  providers_usecase.txt  results_test.json  results_test_busselton.json  serp_api.py  services.py
app/providers/tests/: results_test_dunsborough.json
app/seo/: run_seo_analysis.py  services.py
app/serp_api/: fetch_serp.py  test_data.py
app/services/: run_seo_analysis.py  seo_analysis.py  seo_analysis_plotly.py  seo_analysis_plotly_graph.py  seo_logic.py
migrations/scripts/: README.md  env.py  script.py.mako
migrations/scripts/versions/: 0afd0d4b2b5c_date_value_changed_to_datetime_object_v3.py  0ba7155b5287_unique_constrain___table_args___added_.py  2a29d6a9daa4_created_date_row_removed_from_keyword_.py  344b41b946ad_location_location_unique_param_has_been_.py  58d0497c40c4_service_row_added_to_keyword_model.py  6b2d31417692_service_row_added_to_keyword_model.py  795bc3f9da1b_service_row_added_to_keyword_model_row_.py  880ee0eeffbc_date_value_changed_to_datetime_object.py  8e53cfd9c2a7_location_location_unique_param_has_been_.py  9b1f696b7d10_location_location_unique_param_has_been_.py  aeb7a6208b8a_init.py  b21660f3e3ad_service_removed_checked_date_added_to_.py  c09e1cff6d6e_date_value_changed_to_datetime_object_v2.py  d57d25d7987b_populate_checked_date_from_keyword_.py  e4bdfdfd5150_initial_schema.py  f35e90652e52_service_removed_checked_date_added_to_.py
